--- a/doc/src/examples/magic-sequence.page
+++ b/doc/src/examples/magic-sequence.page
@@ -1,6 +1,6 @@
 ---
 title: Magic Sequence
-long_title: Solving magic sequence using constraint programming in Ruby
+longTitle: Solving magic sequence using constraint programming in Ruby
 inMenu: true
 description: An example showing how to solve the magic sequence problem using constraint programming in Ruby with Gecode/R.
 ---
