--- a/doc/src/examples/magic-sequence.page
+++ b/doc/src/examples/magic-sequence.page
@@ -17,7 +17,12 @@ since 0 occurs 6 times in it, 1 occurs twice, ... -
 
 h2. Code
 
-{includeFile: {filename: ../../../example/magic_sequence.rb, escapeHTML: false, processOutput: false, highlight: ruby}}
+<notextile> 
+  <% example_name = 'magic_sequence' %>
+  <% contents = File.readlines("../example/#{example_name}.rb")[1..-1].join %>
+  <% contents = "require 'rubygems'#{$/}require 'gecoder'#{$/}" + contents %>
+  <%= @plugin_manager['Misc/SyntaxHighlighter'].highlight(contents, 'ruby') %> 
+</notextile>
 
 h2. Output
 
